--- a/build.gradle
+++ b/build.gradle
@@ -26,3 +26,11 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    roomVersion = '2.1.0'
+    archLifecycleVersion = '2.1.0'
+    androidxArchVersion = '2.0.0'
+    coroutines = '1.2.0'
+    retrofitVersion = '2.3.0'
+}
