--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,8 +15,13 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "BASE_URL", "\"https://dl.dropboxusercontent.com/s/2iodh4vg0eortkl/\"")
     }
     buildTypes {
+
+        debug {
+            buildConfigField("String", "BASE_URL", "\"https://dl.dropboxusercontent.com/s/2iodh4vg0eortkl/\"")
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
@@ -25,6 +30,10 @@ android {
 
     packagingOptions {
         exclude 'META-INF/atomicfu.kotlin_module'
+    }
+
+    dataBinding {
+        enabled true
     }
 }
 
@@ -62,4 +71,9 @@ dependencies {
     // Retrofit
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-gson:$retrofitVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$logginInterceptorVersion"
+
+    // Glide for image loading
+    implementation "com.github.bumptech.glide:glide:$glideVersion"
+    kapt "com.github.bumptech.glide:compiler:$glideVersion"
 }
