--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -32,5 +32,8 @@ ext {
     archLifecycleVersion = '2.1.0'
     androidxArchVersion = '2.0.0'
     coroutines = '1.2.0'
-    retrofitVersion = '2.3.0'
+    retrofitVersion = '2.6.0'
+    glideVersion = '4.9.0'
+    logginInterceptorVersion = '3.8.0'
+
 }
