--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ task clean(type: Delete) {
 }
 
 ext {
+    supportVersion = '28.0.0'
     roomVersion = '2.1.0'
     archLifecycleVersion = '2.1.0'
     androidxArchVersion = '2.0.0'
@@ -35,5 +36,10 @@ ext {
     retrofitVersion = '2.6.0'
     glideVersion = '4.9.0'
     logginInterceptorVersion = '3.8.0'
+    testVersion = '1.2.0'
+    espressoVersion = '3.2.0'
+    appCompatVersion = '1.1.0'
+    ktxVersion = '1.1.0'
+    constraintVersion = '1.1.3'
 
 }
